MDEV-37207: dumping tables for multi delete query doesn't work always

when doing multiple DELETE on tables:
-> if there was data to delete, then no ddls were dumped to the trace.
-> However, when there was no data that is being deleted from the tables,
   then ddls of the tables were getting dumped to the trace.

The problem is that store_tables_context_in_trace() is not getting
invoked, when there was data to delete from the tables. Although, there
was no error when executing the delete query, the result of basic cleanup was
non-zero and failure of the the result check was prohibiting from invoking
store_tables_context_in_trace() method.

Removed this additional result check for invoking
store_tables_context_in_trace() from mysql_execute_command().